--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>PDFtron Playground App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="webviewer/CoreControls.js"></script>
-    <script src="webviewer/pdf/PDFNet.js"></script>
+    <script src="webviewer/7.3.0/CoreControls.js"></script>
+    <script src="webviewer/7.3.0/pdf/PDFNet.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
